# TypeWall

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Idea.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  docs-release.yml  openspec-baseline.yml  openspec-init.yml  openspec-sync.yml  openspec-validate.yml  pypi-release.yml  specstat-baseline.yml  specstat-clean.yml  specstat-init.yml  specstat-sync.yml  specstat-validate.yml
benchmarks/: conftest.py  test_validation_benchmarks.py
docs/: docs.json  errors.md  getting-started.md  index.md  package-lock.json  package.json
docs/development/: benchmarks.md  conformance.md  contributing-guide.md  contributing.md
docs/guides/: cli.md  composition.md  constraints.md  custom-processing.md  environment.md  export.md  fastapi.md  typing.md
docs/reference/: api.md
examples/: config_validation.py  fastapi_app.py
examples/cli/: schema.py  user.json
openspec/: config.yaml  index.json  visualize.json
openspec/changes/: visualize.json
openspec/changes/archive/: visualize.json
openspec/changes/archive/2026-06-10-typewall-core-mvp/: design.md  proposal.md  tasks.md  visualize.json
openspec/changes/archive/2026-06-10-typewall-core-mvp/specs/primitive-validation/: spec.md
openspec/changes/archive/2026-06-10-typewall-core-mvp/specs/schema-parsing/: spec.md
openspec/changes/archive/2026-06-10-typewall-core-mvp/specs/structured-validation/: spec.md  visualize.json
openspec/changes/archive/2026-06-10-typewall-core-mvp/specs/validation-errors/: spec.md  visualize.json
openspec/changes/archive/2026-06-11-replace-mkdocs-with-mintlify/: design.md  proposal.md  tasks.md  visualize.json
openspec/changes/archive/2026-06-11-replace-mkdocs-with-mintlify/specs/: visualize.json
openspec/changes/archive/2026-06-11-replace-mkdocs-with-mintlify/specs/project-documentation/: spec.md
openspec/changes/archive/2026-06-11-typewall-integrations-release/: design.md  proposal.md  tasks.md  visualize.json
openspec/changes/archive/2026-06-11-typewall-integrations-release/specs/: visualize.json
openspec/changes/archive/2026-06-11-typewall-integrations-release/specs/environment-parsing/: spec.md
openspec/changes/archive/2026-06-11-typewall-integrations-release/specs/fastapi-integration/: spec.md
openspec/changes/archive/2026-06-11-typewall-integrations-release/specs/package-release/: spec.md  visualize.json
openspec/changes/archive/2026-06-11-typewall-project-hardening/: design.md  proposal.md  tasks.md  visualize.json
openspec/changes/archive/2026-06-11-typewall-project-hardening/specs/: visualize.json
openspec/changes/archive/2026-06-11-typewall-validation-enhancements/: design.md  proposal.md  tasks.md  visualize.json
openspec/changes/archive/2026-06-11-typewall-validation-enhancements/specs/: visualize.json
openspec/specs/: visualize.json
openspec/specs/benchmark-suite/: spec.md  visualize.json
openspec/specs/custom-processing/: spec.md  visualize.json
openspec/specs/environment-parsing/: spec.md  visualize.json
openspec/specs/fastapi-integration/: spec.md  visualize.json
openspec/specs/integration-conformance/: spec.md  visualize.json
openspec/specs/package-architecture/: spec.md  visualize.json
openspec/specs/package-release/: spec.md  visualize.json
openspec/specs/primitive-validation/: spec.md  visualize.json
openspec/specs/project-documentation/: spec.md  visualize.json
openspec/specs/project-organization/: spec.md  visualize.json
openspec/specs/python-typing-integration/: spec.md  visualize.json
openspec/specs/quality-automation/: spec.md  visualize.json
openspec/specs/schema-composition/: spec.md  visualize.json
openspec/specs/schema-export/: spec.md  visualize.json
openspec/specs/schema-parsing/: spec.md  visualize.json
openspec/specs/structured-validation/: spec.md  visualize.json
openspec/specs/validation-cli/: spec.md  visualize.json
openspec/specs/validation-constraints/: spec.md  visualize.json
openspec/specs/validation-errors/: spec.md  visualize.json
scripts/: check_base_dependencies.py  verify_release.py
tests/: cli_targets.py  conftest.py  test_cli.py  test_composition.py  test_constraints.py  test_distribution_smoke.py  test_environment.py  test_errors.py  test_fastapi_integration.py  test_package.py  test_properties.py  test_public_api.py  test_schema_parsing.py  test_structured.py  test_typing_integration.py
tests/conformance/: test_cross_feature.py  test_examples.py  test_package_architecture.py  test_sensitive_values.py
tests/distribution/: test_distribution_smoke.py  test_package.py
tests/integration/: cli_targets.py  test_cli.py  test_cli_in_process.py  test_environment.py  test_export.py  test_fastapi_integration.py
tests/property/: test_enhancement_properties.py
tests/typing/: api.py  check_negative.py  enhancements.py  negative.py  pyright-negativeconfig.json
tests/unit/: test_composition.py  test_custom_processing.py  test_primitives.py  test_schema_parsing.py
typewall/: __init__.py  _context.py  _sentinels.py  builder.py  cli.py  composition.py  constraints.py  environment.py  errors.py  export.py  fastapi.py  primitives.py  schema.py  structured.py  typing.py
typewall/adapters/: __init__.py  cli.py  environment.py  export.py
typewall/core/: __init__.py  context.py  errors.py  schema.py  sentinels.py
typewall/integrations/: fastapi.py
typewall/schemas/: __init__.py  builder.py  composition.py  primitives.py  structured.py  typing.py
(+21 files in other folders)
