[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "typewall"
version = "0.1.0"
description = "Runtime type validation for Python"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "TypeWall contributors" }]
keywords = ["validation", "schema", "runtime-types", "parsing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "email-validator>=2.2,<3",
  "typing-extensions>=4.10",
]

[dependency-groups]
dev = [
  "build>=1.3",
  "hypothesis>=6.100",
  "mypy>=1.11,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6.0",
  "pyright>=1.1.400",
  "ruff>=0.11",
]

[tool.hatch.build.targets.wheel]
packages = ["typewall"]

[tool.hatch.build.targets.sdist]
include = ["/typewall", "/README.md", "/LICENSE", "/pyproject.toml"]

[tool.pytest.ini_options]
addopts = ["-ra", "--strict-config", "--strict-markers"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["typewall"]

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.9"
strict = true
files = ["typewall", "tests/typing/api.py", "tests/typing/enhancements.py"]
show_error_codes = true
warn_unreachable = true

[tool.ruff]
target-version = "py39"
line-length = 88
extend-exclude = [".uv-cache", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B017"]
